--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "@dcloudio/uni-ui": "^1.2.11",
     "uview-ui": "^1.8.4"
+  },
+  "devDependencies": {
+    "sass-loader": "^11.0.1"
   }
 }
