--- a/uview-ui/package.json
+++ b/uview-ui/package.json
@@ -1,33 +1,35 @@
 {
-  "_from": "uview-ui",
+  "_args": [
+    [
+      "uview-ui@1.8.4",
+      "D:\\data\\code\\uniapp\\daoyun-app-front"
+    ]
+  ],
+  "_from": "uview-ui@1.8.4",
   "_id": "uview-ui@1.8.4",
   "_inBundle": false,
   "_integrity": "sha1-4yu/I3lCHTGQIuMk4ct7U4fTvUQ=",
   "_location": "/uview-ui",
   "_phantomChildren": {},
   "_requested": {
-    "type": "tag",
+    "type": "version",
     "registry": true,
-    "raw": "uview-ui",
+    "raw": "uview-ui@1.8.4",
     "name": "uview-ui",
     "escapedName": "uview-ui",
-    "rawSpec": "",
+    "rawSpec": "1.8.4",
     "saveSpec": null,
-    "fetchSpec": "latest"
+    "fetchSpec": "1.8.4"
   },
   "_requiredBy": [
-    "#USER",
     "/"
   ],
   "_resolved": "https://registry.npm.taobao.org/uview-ui/download/uview-ui-1.8.4.tgz",
-  "_shasum": "e32bbf2379421d319022e324e1cb7b5387d3bd44",
-  "_spec": "uview-ui",
-  "_where": "D:\\data\\Code\\shoolclass\\uni-app\\daoyun_app_dev",
+  "_spec": "1.8.4",
+  "_where": "D:\\data\\code\\uniapp\\daoyun-app-front",
   "author": {
     "name": "uView"
   },
-  "bundleDependencies": false,
-  "deprecated": false,
   "description": "uView UI，是uni-app生态优秀的UI框架，全面的组件和便捷的工具会让您信手拈来，如鱼得水",
   "devDependencies": {
     "node-sass": "^4.14.0",
