--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 *.user
 *.userosscache
 *.sln.docstates
- 
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
- 
+uppackage
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
